update codegen for Workload and PodGroup APIs
