# staging/src/k8s.io/api/scheduling/v1alpha2/zz_generated.deepcopy.go
@@ -120,6 +120,32 @@ func (in *PodGroupList) DeepCopyObject() runtime.Object {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *PodGroupResourceClaim) DeepCopyInto(out *PodGroupResourceClaim) {
+	*out = *in
+	if in.ResourceClaimName != nil {
+		in, out := &in.ResourceClaimName, &out.ResourceClaimName
+		*out = new(string)
+		**out = **in
+	}
+	if in.ResourceClaimTemplateName != nil {
+		in, out := &in.ResourceClaimTemplateName, &out.ResourceClaimTemplateName
+		*out = new(string)
+		**out = **in
+	}
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new PodGroupResourceClaim.
+func (in *PodGroupResourceClaim) DeepCopy() *PodGroupResourceClaim {
+	if in == nil {
+		return nil
+	}
+	out := new(PodGroupResourceClaim)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *PodGroupSchedulingPolicy) DeepCopyInto(out *PodGroupSchedulingPolicy) {
 	*out = *in
 	if in.Basic != nil {
@@ -154,6 +180,13 @@ func (in *PodGroupSpec) DeepCopyInto(out *PodGroupSpec) {
 		(*in).DeepCopyInto(*out)
 	}
 	in.SchedulingPolicy.DeepCopyInto(&out.SchedulingPolicy)
+	if in.ResourceClaims != nil {
+		in, out := &in.ResourceClaims, &out.ResourceClaims
+		*out = make([]PodGroupResourceClaim, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
 	return
 }
 
@@ -194,6 +227,13 @@ func (in *PodGroupStatus) DeepCopy() *PodGroupStatus {
 func (in *PodGroupTemplate) DeepCopyInto(out *PodGroupTemplate) {
 	*out = *in
 	in.SchedulingPolicy.DeepCopyInto(&out.SchedulingPolicy)
+	if in.ResourceClaims != nil {
+		in, out := &in.ResourceClaims, &out.ResourceClaims
+		*out = make([]PodGroupResourceClaim, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
 	return
 }
 
