# staging/src/k8s.io/api/scheduling/v1alpha2/zz_generated.model_name.go
@@ -42,6 +42,11 @@ func (in PodGroupList) OpenAPIModelName() string {
 }
 
 // OpenAPIModelName returns the OpenAPI model name for this type.
+func (in PodGroupResourceClaim) OpenAPIModelName() string {
+	return "io.k8s.api.scheduling.v1alpha2.PodGroupResourceClaim"
+}
+
+// OpenAPIModelName returns the OpenAPI model name for this type.
 func (in PodGroupSchedulingPolicy) OpenAPIModelName() string {
 	return "io.k8s.api.scheduling.v1alpha2.PodGroupSchedulingPolicy"
 }
